[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1", "with-chrono-0_4"] }
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["time", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
basic-toml = "0.1"
derive_more = "2.0.1"
env_logger = { version = "0.11.8", default-features = false, features = ["humantime"] }
log = "0.4.28"
serde_json = "1.0.143"
uuid = { version = "1.18.1", default-features = false, features = ["v4", "std"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock", "std"] }
actix-cors = "0.7.1"
blake2 = "0.10.6"
data-encoding = { version = "2.9.0", features = ["alloc"] }
regex = "1.11.2"
arc-swap = "1.7.1"
ureq = { version = "3", default-features = false, features = ["json", "rustls", "rustls-webpki-roots"] }
mimalloc = "0.1.48"
futures-util = "0.3.31"

[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
